changes in table format

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,4 +1,13 @@
 
+@article{oecd_nea_benchmark_2017,
+	title = {Benchmark of the {Modular} {High}-{Temperature} {Gas}-{Cooled} {Reactor} ({MHTGR})-350 {MW} {Core} {Design} {Volumes} {I} and {II}},
+	language = {en},
+	author = {OECD NEA},
+	year = {2017},
+	pages = {110},
+	file = {2017 - Benchmark of the Modular High-Temperature Gas-Cool.pdf:/home/roberto/Zotero/storage/4RRRR45R/2017 - Benchmark of the Modular High-Temperature Gas-Cool.pdf:application/pdf}
+}
+
 @misc{chris_ellis_preliminary_2010,
 	title = {Preliminary {Prismatic} {Coupled} {Neutronics} {Thermal} {Fluids} {Transient} {Benchmark} of the {MHTGR}-350 {MW} {Core} {Design}},
 	language = {en},
