changes in report

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,9 +1,14 @@
 
-@misc{chris_ellis_preliminary_2010,
-	title = {Preliminary {Prismatic} {Coupled} {Neutronics} {Thermal} {Fluids} {Transient} {Benchmark} of the {MHTGR}-350 {MW} {Core} {Design}},
+@techreport{strydom_results_2015,
+	title = {Results for {Phase} {I} of the {IAEA} {Coordinated} {Research} {Program} on {HTGR} {Uncertainties}},
+	url = {http://www.osti.gov/servlets/purl/1173079/},
 	language = {en},
-	author = {Chris Ellis, Hans Gougar},
-	month = jun,
-	year = {2010},
-	file = {Chris Ellis - 2010 - Preliminary Prismatic Coupled Neutronics Thermal F.pdf:/home/roberto/Zotero/storage/ZGYU63V7/Chris Ellis - 2010 - Preliminary Prismatic Coupled Neutronics Thermal F.pdf:application/pdf}
+	number = {INL/EXT--14-32944, 1173079},
+	urldate = {2020-07-15},
+	author = {Strydom, Gerhard and Bostelmann, Friederike and Yoon, Su Jong},
+	month = jan,
+	year = {2015},
+	doi = {10.2172/1173079},
+	pages = {INL/EXT--14--32944, 1173079},
+	file = {Strydom et al. - 2015 - Results for Phase I of the IAEA Coordinated Resear.pdf:/home/roberto/Zotero/storage/LN9NILXJ/Strydom et al. - 2015 - Results for Phase I of the IAEA Coordinated Resear.pdf:application/pdf}
 }
