changes in the xs, not sure about graphite

--- a/report.tex
+++ b/report.tex
@@ -65,7 +65,10 @@ Exercise I-1a specifies a homogeneous fuel region.
 Exercise I-1b specifies the TRISO fuel particles explicitly.
 
 The problem uses a reflective boundary condition.
-Two sub-cases : a Cold Zero Power (CZP) and Hot Full Power (HFP)
+Two sub-cases: a Cold Zero Power (CZP) and Hot Full Power (HFP)
+We will focus on the first one.
+
+Differences to OECD MHTGR Benchmark.
 
 	\begin{figure}[htbp!]
 		\centering
@@ -86,8 +89,8 @@ Two sub-cases : a Cold Zero Power (CZP) and Hot Full Power (HFP)
 		\label{fig:fuel}
 	\end{figure}
 
-Differences to OECD MHTGR Benchmark
-Fuel compact outer radius: 0.6225
+
+
 
 
 
