added short intro

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,4 +1,21 @@
 
+@article{bostelmann_criticality_2016,
+	title = {Criticality calculations of the {Very} {High} {Temperature} {Reactor} {Critical} {Assembly} benchmark with {Serpent} and {SCALE}/{KENO}-{VI}},
+	volume = {90},
+	issn = {03064549},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0306454915300177},
+	doi = {10.1016/j.anucene.2015.12.008},
+	abstract = {Within the framework of the IAEA Coordinated Research Project on HTGR Uncertainty Analysis in Modeling, criticality calculations of the Very High Temperature Critical Assembly experiment were performed as the validation reference to the prismatic MHTGR-350 lattice calculations. Criticality measurements performed at several temperature points at this Japanese graphitemoderated facility were recently included in the International Handbook of Evaluated Reactor Physics Benchmark Experiments, and represent one of the few data sets available for the validation of HTGR lattice physics. This work compares VHTRC criticality simulations utilizing the Monte Carlo codes Serpent and SCALE/KENO-VI. Reasonable agreement was found between Serpent and KENO-VI, but only the use of the latest ENDF cross section library release, namely the ENDF/B-VII.1 library, led to an improved match with the measured data. Furthermore, the fourth beta release of SCALE 6.2/KENO-VI showed significant improvements from the current SCALE 6.1.2 version, compared to the experimental values and Serpent.},
+	language = {en},
+	urldate = {2020-07-16},
+	journal = {Annals of Nuclear Energy},
+	author = {Bostelmann, Friederike and Hammer, Hans R. and Ortensi, Javier and Strydom, Gerhard and Velkov, Kiril and Zwermann, Winfried},
+	month = apr,
+	year = {2016},
+	pages = {343--352},
+	file = {Bostelmann et al. - 2016 - Criticality calculations of the Very High Temperat.pdf:/home/roberto/Zotero/storage/AVYQ7EU2/Bostelmann et al. - 2016 - Criticality calculations of the Very High Temperat.pdf:application/pdf}
+}
+
 @techreport{strydom_results_2015,
 	title = {Results for {Phase} {I} of the {IAEA} {Coordinated} {Research} {Program} on {HTGR} {Uncertainties}},
 	url = {http://www.osti.gov/servlets/purl/1173079/},
