--- a/report.tex
+++ b/report.tex
@@ -54,6 +54,14 @@ fill=blue!30]
 %		\thispagestyle{empty}
 %	\end{titlepage}
 
+\section{Introduction}
+
+In 2013, the IAEA launched the Coordinated Research Project (CRP) on Uncertainty Analysis in Modeling (UAM) to study uncertainty propagation in the High Temperature Gas-cooled Reactor (HTGR) analysis chain.
+
+HTGR reactors require core simulation techniques not typically utilized in Light Water Reactor (LWR) analysis due to several unique features, such as double heterogeneous fuel design including tristructural isotropic (TRISO) fuel particles, large graphite quantities, and high operational temperatures.
+
+\cite{bostelmann_criticality_2016}.
+
 \section{Exercise I-1a}
 
 Objective is to address the uncertainties due to double heterogeneity or self-shielding treatment.
