added exI-1b results'

--- a/report.tex
+++ b/report.tex
@@ -98,8 +98,8 @@ Differences to OECD MHTGR Benchmark.
 	\end{figure}
 
 HFP:
-ExerciseI-1a. 43.8 sec. MPI = 8, OMP = 16. 128 cores.
-keff = 1.19085 +/- 0.00047
+ExerciseI-1a. 1.33 min. MPI = 8, OMP = 8: 64 cores.
+keff = 1.19098 +/- 0.00046
 
 % OMP: OpenMP threads = number of available processor cores.
 % MPI: Amount of processes.
@@ -107,6 +107,8 @@ keff = 1.19085 +/- 0.00047
 % Ex: 2 sockets (2 physical CPUs) with 12 cores (total 24 cores): OMP = 24.
 % Ex: 2 Computers with 2 sockets and 12 cores/socket (total 48 cores): MPI = 2, OMP = 24.
 
+ExerciseI-1b. 1.81 min. MPI = 8, OMP = 8: 64 cores.
+keff = 1.25362 +/- 0.00042
 
 \pagebreak
 \bibliographystyle{plain}
