exerciseI-2a input file

--- a/report.tex
+++ b/report.tex
@@ -62,7 +62,7 @@ HTGR reactors require core simulation techniques not typically utilized in Light
 
 \cite{bostelmann_criticality_2016}.
 
-\section{Exercise I-1a}
+\section{Exercise I-1}
 
 Objective is to address the uncertainties due to double heterogeneity or self-shielding treatment.
 
@@ -109,6 +109,11 @@ keff = 1.19098 +/- 0.00046
 
 ExerciseI-1b. 1.81 min. MPI = 8, OMP = 8: 64 cores.
 keff = 1.25362 +/- 0.00042
+
+\section{Exercise I-2}
+
+Exercise I-2a: fresh single block, Figure \ref{fig:fuelblock}.
+Exercise I-2b: depleted block, similar to Figure \ref{fig:fuelblock} but without the LBP compacts.
 
 \pagebreak
 \bibliographystyle{plain}
