--- a/report.tex
+++ b/report.tex
@@ -98,8 +98,10 @@ Differences to OECD MHTGR Benchmark.
 	\end{figure}
 
 HFP:
-ExerciseI-1a. 1.33 min. MPI = 8, OMP = 8: 64 cores.
-keff = 1.19098 +/- 0.00046
+ExerciseI-1a.
+50000 neutrons/cycle, 500 active cycles, 50 inactive cycles.
+3.11 min. MPI = 8, OMP = 8: 64 cores.
+six_ff_keff = 1.19156 +/- 0.00021
 
 % OMP: OpenMP threads = number of available processor cores.
 % MPI: Amount of processes.
@@ -107,8 +109,10 @@ keff = 1.19098 +/- 0.00046
 % Ex: 2 sockets (2 physical CPUs) with 12 cores (total 24 cores): OMP = 24.
 % Ex: 2 Computers with 2 sockets and 12 cores/socket (total 48 cores): MPI = 2, OMP = 24.
 
-ExerciseI-1b. 1.81 min. MPI = 8, OMP = 8: 64 cores.
-keff = 1.25362 +/- 0.00042
+ExerciseI-1b. 
+50000 neutrons/cycle, 500 active cycles, 50 inactive cycles.
+4.04 min. MPI = 8, OMP = 8: 64 cores.
+six_ff_keff = 1.25411 +/- 0.00020
 
 \section{Exercise I-2}
 
