--- a/report.tex
+++ b/report.tex
@@ -62,7 +62,7 @@ HTGR reactors require core simulation techniques not typically utilized in Light
 
 \cite{bostelmann_criticality_2016}.
 
-\section{Exercise I-1}
+\section{CRP Exercise I-1}
 
 Objective is to address the uncertainties due to double heterogeneity or self-shielding treatment.
 
@@ -114,12 +114,24 @@ ExerciseI-1b.
 4.04 min. MPI = 8, OMP = 8: 64 cores.
 six_ff_keff = 1.25411 +/- 0.00020
 
-\section{Exercise I-2}
+\section{CRP Exercise I-2}
 
 Exercise I-2a: fresh single block, Figure \ref{fig:fuelblock}.
 Exercise I-2b: depleted block, similar to Figure \ref{fig:fuelblock} but without the LBP compacts.
 
+\section{OECD Exercise I}
 
+oecd-exI-1b:
+same material composition as OECD MHTGR 350
+
+six_ff_keff = 1.25205 +/- 0.00019
+4 min MPI = 8, OMP = 16
+
+oecd-exI-1b2:
+same material composition as CRP
+
+six_ff_keff = 
+4 min MPI = 8, OMP = 16
 
 \pagebreak
 \bibliographystyle{plain}
