--- a/report.tex
+++ b/report.tex
@@ -122,7 +122,7 @@ Exercise I-2b: depleted block, similar to Figure \ref{fig:fuelblock} but without
 \section{OECD Exercise I}
 
 oecd-exI-1b:
-same material composition as OECD MHTGR 350
+same material composition as OECD MHTGR 350 (the one I calculated)
 
 six_ff_keff = 1.25205 +/- 0.00019
 4 min MPI = 8, OMP = 16
@@ -130,7 +130,7 @@ six_ff_keff = 1.25205 +/- 0.00019
 oecd-exI-1b2:
 same material composition as CRP
 
-six_ff_keff = 
+six_ff_keff = 1.24339 +/- 0.00019
 4 min MPI = 8, OMP = 16
 
 \pagebreak
