changes in cell names, made them more readable

--- a/mhtgr.tex
+++ b/mhtgr.tex
@@ -62,7 +62,7 @@ fill=blue!30]
 
 Table \ref{tab:compact} specifies details of the TRISO particle and fuel compact designs of the MHTGR-350.
 
-	\begin{table}
+	\begin{table}[htbp!]
 	\centering
 	    \caption{TRISO and Fuel Compact Characteristics \cite{oecd_nea_benchmark_2017}.}
 	    \label{tab:compact}
@@ -94,7 +94,7 @@ Table \ref{tab:compact} specifies details of the TRISO particle and fuel compact
 
 \section{Fuel Assembly}
 
-	\begin{table}[H]
+	\begin{table}[htbp!]
 		\centering
 	    \caption{MHTGR350 standard fuel element characteristics.}
 	    \label{tab:scharacteristics}
@@ -117,7 +117,7 @@ Table \ref{tab:compact} specifies details of the TRISO particle and fuel compact
 		\end{tabular}
 	\end{table}
 
-	\begin{table}[H]
+	\begin{table}[htbp!]
 		\centering
 	    \caption{MHTGR350 RSC fuel element characteristics.}
 	    \label{tab:rcharacteristics}
