added case oecd-exI-1b3 with composition from oecd benchamrk phase 3

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -29,3 +29,13 @@
 	pages = {INL/EXT--14--32944, 1173079},
 	file = {Strydom et al. - 2015 - Results for Phase I of the IAEA Coordinated Resear.pdf:/home/roberto/Zotero/storage/LN9NILXJ/Strydom et al. - 2015 - Results for Phase I of the IAEA Coordinated Resear.pdf:application/pdf}
 }
+
+@article{rahnema_whitepaper_2015,
+	title = {Whitepaper {The} {Current} {Status} of the {Tools} for {Modeling} and {Simulation} of {Advanced} {High} {Temperature} {Reactor} {Neutronics} {Analysis}},
+	language = {en},
+	author = {Rahnema, Farzad and Petrovic, Bojan and Edgar, Christopher and Zhang, Dingkang and Avigni, Pietro and Huang, Michael and Terlizzi, Stefano},
+	month = dec,
+	year = {2015},
+	pages = {40},
+	file = {Rahnema et al. - Whitepaper The Current Status of the Tools for Mod.pdf:/home/roberto/Zotero/storage/YIDQDPXW/Rahnema et al. - Whitepaper The Current Status of the Tools for Mod.pdf:application/pdf}
+}
