--- a/report.tex
+++ b/report.tex
@@ -145,21 +145,23 @@ six_ff_keff = 1.06523 +/- 0.00011
 
 oecd-exI-1b:
 same material composition as OECD MHTGR 350 (the one I calculated)
-
 six_ff_keff = 1.25205 +/- 0.00019
 4 min MPI = 8, OMP = 16
 
 oecd-exI-1b2:
 same material composition as CRP
-
 six_ff_keff = 1.24348 +/- 0.00020
 4.01 min MPI = 8, OMP = 16
 
 oecd-exI-1b3:
 same material composition as OECD MHTGR 350 - Phase III
-
 six_ff_keff = 1.24872 +/- 0.00020
 4.01 min MPI = 8, OMP = 16
+
+oecd-exI-2a:
+same material composition as OECD MHTGR 350 - Phase III
+six_ff_keff = 1.07017 +/- 0.00011
+1.27 h MPI = 8, OMP = 16
 
 \pagebreak
 \bibliographystyle{plain}
