added figures to report

--- a/report.tex
+++ b/report.tex
@@ -143,7 +143,7 @@ six_ff_keff = 1.06523 +/- 0.00011
 
 \section{OECD Exercise I}
 
-oecd-exI-1b:
+oecd-exI-1b1: Figure \ref{fig:compact}.
 same material composition as OECD MHTGR 350 (the one I calculated)
 six_ff_keff = 1.25205 +/- 0.00019
 4 min MPI = 8, OMP = 16
@@ -158,10 +158,24 @@ same material composition as OECD MHTGR 350 - Phase III
 six_ff_keff = 1.24872 +/- 0.00020
 4.01 min MPI = 8, OMP = 16
 
-oecd-exI-2a:
+\begin{figure}[htbp!]
+	\centering
+	\includegraphics[height=5cm]{oecd-exI-1b1.png}
+	\caption{Compact.}
+	\label{fig:compact}
+\end{figure}
+
+oecd-exI-2a: Figure \ref{fig:assembly}.
 same material composition as OECD MHTGR 350 - Phase III
 six_ff_keff = 1.07017 +/- 0.00011
 1.27 h MPI = 8, OMP = 16
+
+\begin{figure}[htbp!]
+	\centering
+	\includegraphics[height=5cm]{oecd-exI-2a.png}
+	\caption{Fuel Assembly.}
+	\label{fig:assembly}
+\end{figure}
 
 \pagebreak
 \bibliographystyle{plain}
