fixed stand column figures

--- a/report.tex
+++ b/report.tex
@@ -167,14 +167,44 @@ six_ff_keff = 1.24872 +/- 0.00020
 
 oecd-exI-2a: Figure \ref{fig:assembly}.
 same material composition as OECD MHTGR 350 - Phase III
-six_ff_keff = 1.07017 +/- 0.00011
-1.27 h MPI = 8, OMP = 16
+six_ff_keff = 1.07006 +/- 0.00011
+1.29 h MPI = 8, OMP = 16
 
 \begin{figure}[htbp!]
 	\centering
 	\includegraphics[height=5cm]{oecd-exI-2a.png}
 	\caption{Fuel Assembly.}
 	\label{fig:assembly}
+\end{figure}
+
+\section{OECD Standard-column}
+
+Figure \ref{fig:stcol}.
+same material composition as OECD MHTGR 350 - Phase III
+six_ff_keff = 1.36338 +/- 0.00006
+4.86 h MPI = 8, OMP = 16
+
+I feel that this keff should be lower than the keff of oecd-exI-2a.
+
+\begin{figure}[htbp!]
+	\centering
+	\includegraphics[height=5cm]{oecd-standard-column_geom1.png}
+	\caption{Standard column.}
+	\label{fig:stcol}
+\end{figure}
+
+\section{OECD Fullcore}
+
+Figure \ref{fig:fullcore}.
+same material composition as OECD MHTGR 350 - Phase III
+six_ff_keff = 1.38714 +/- 0.00004
+4.65 h MPI = 8, OMP = 16
+
+\begin{figure}[htbp!]
+	\centering
+	\includegraphics[height=5cm]{oecd-fullcore_geom1.png}
+	\caption{Full core.}
+	\label{fig:fullcore}
 \end{figure}
 
 \pagebreak
