--- a/report.tex
+++ b/report.tex
@@ -131,6 +131,18 @@ six_ff_keff = 1.25411 +/- 0.00020
 
 Although ExerciseI-1b runs a 30\% slower K$_{eff}$ changes considerably.
 
+ExerciseI-1bE. 
+50000 neutrons/cycle, 500 active cycles, 50 inactive cycles.
+4.04 min. MPI = 8, OMP = 8: 64 cores.
+six_ff_keff = 1.25411 +/- 0.00020
+
+Reference result using (I don't know what version mine is):
+42.7 min. OMP = 4.
+six_ff_keff = 1.25303 +/- 0.00019
+
+ENDFB7.0 1.24657 ± 0.00013
+ENDFB7.1 1.24525 ± 0.00014
+
 \section{CRP Exercise I-2}
 
 Exercise I-2a: fresh single block, Figure \ref{fig:fuelblock}.
