changes in the tables formatting

--- a/mhtgr.tex
+++ b/mhtgr.tex
@@ -94,52 +94,45 @@ Table \ref{tab:compact} specifies details of the TRISO particle and fuel compact
 
 \section{Fuel Assembly}
 
-	\begin{table}[htbp!]
-		\centering
-	    \caption{MHTGR350 standard fuel element characteristics.}
-	    \label{tab:scharacteristics}
-		\begin{tabular}{l|l}
-		\hline
-		Characteristic                   & Value         \\ \hline
-		Block pitch (flat-to-flat)       & 36 cm         \\
-		Block graphite density           & 1.85 g/cm$^3$ \\
-		Number of fuel holes             & 210           \\
-		Fuel hole radius                 & 0.635 cm      \\
-		Compacts per hole                & 15            \\
-		Number of large coolant holes    & 120           \\
-		Large coolant hole radius        & 0.794 cm      \\
-		Number of small coolant holes    & 6             \\
-		Small coolant hole radius        & 0.635 cm      \\
-		Fuel/coolant pitch               & 1.879 cm      \\
-		Fuel handling diameter           & 3.5 cm        \\ 
-		Fuel handling length             & 26.4 cm       \\ 
-		Fuel length                      & 79.3 cm       \\ \hline
-		\end{tabular}
-	\end{table}
+Table \ref{tab:core-characteristics} specifies details of the fuel elements of the MHTGR-350.
 
 	\begin{table}[htbp!]
-		\centering
-	    \caption{MHTGR350 RSC fuel element characteristics.}
-	    \label{tab:rcharacteristics}
-		\begin{tabular}{l|l}
-		\hline
-		Characteristic                   & Value         \\ \hline
-		Block pitch (flat-to-flat)       & 36 cm         \\
-		Block graphite density           & 1.85 g/cm$^3$ \\
-		Number of Fuel holes             & 186           \\
-		Fuel hole radius                 & 0.635 cm      \\
-		Compacts per hole                & 15            \\
-		Number of large coolant holes    & 88            \\
-		Large coolant hole radius        & 0.794 cm      \\
-		Number of small coolant holes    & 7             \\
-		Small coolant hole radius        & 0.635 cm      \\
-		Fuel/coolant pitch               & 1.879 cm      \\ 
-		RSC hole diameter                & 9.525 cm      \\
-		RSC center to assembly center    & 9.756 cm      \\
-		Fuel handling diameter           & 3.5 cm        \\ 
-		Fuel handling length             & 26.4 cm       \\
-		Fuel length                      & 79.3 cm       \\ \hline
-		\end{tabular}
+	\centering
+        \caption{MHTGR350 fuel element characteristics \cite{oecd_nea_benchmark_2017}.}
+        \label{tab:core-characteristics}
+	  	\begin{tabular}{@{}l S[table-format=2.2] c}
+	    \toprule
+	    \multicolumn{1}{c}{Shared characteristics} & \multicolumn{1}{c@{}}{Value} & \multicolumn{1}{c@{}}{Units} \\
+	    \midrule
+		Block pitch (flat-to-flat)       & 36 		& cm       \\
+		Fuel length                      & 79.3 	& cm       \\
+		Fuel handling diameter           & 3.5 		& cm       \\ 
+		Fuel handling length             & 26.4 	& cm       \\ 
+		RSC hole diameter                & 9.525 	& cm       \\
+		RSC center to assembly center    & 9.756 	& cm       \\
+		Fuel/coolant pitch               & 1.879 	& cm       \\
+		Fuel hole radius                 & 0.635 	& cm       \\
+		Large coolant hole radius        & 0.794 	& cm       \\
+		Small coolant hole radius        & 0.635 	& cm       \\
+		Compacts per hole                & \multicolumn{1}{c@{}}{15}   	& -        \\
+		\midrule
+
+        \multicolumn{1}{c}{Standard element} &  &  \\
+
+		\midrule
+		Number of large coolant holes    & \multicolumn{1}{c@{}}{120}   & -        \\
+		Number of small coolant holes    & \multicolumn{1}{c@{}}{6}   	& -        \\
+		Number of fuel holes             & \multicolumn{1}{c@{}}{210}  	& -        \\
+		\midrule
+
+        \multicolumn{1}{c}{RSC element} &  &  \\
+
+		\midrule
+		Number of large coolant holes    & \multicolumn{1}{c@{}}{88}    & -        \\
+		Number of small coolant holes    & \multicolumn{1}{c@{}}{7}   	& -        \\
+		Number of fuel holes             & \multicolumn{1}{c@{}}{186}  	& -        \\
+	    \bottomrule
+	  	\end{tabular}
 	\end{table}
 
 \pagebreak
