updated readme with the results

--- a/oecd/report.tex
+++ b/oecd/report.tex
@@ -56,20 +56,9 @@ fill=blue!30]
 
 \section{OECD Exercise I}
 
-oecd-exI-1b1: Figure \ref{fig:compact}.
-same material composition as OECD MHTGR 350 (the one I calculated)
-six_ff_keff = 1.25205 +/- 0.00019
-4 min MPI = 8, OMP = 16
-
-oecd-exI-1b2:
-same material composition as CRP
-six_ff_keff = 1.24348 +/- 0.00020
-4.01 min MPI = 8, OMP = 16
-
-oecd-exI-1b3:
+oecd-exI-1b: 
+Figure \ref{fig:compact}.
 same material composition as OECD MHTGR 350 - Phase III
-six_ff_keff = 1.24872 +/- 0.00020
-4.01 min MPI = 8, OMP = 16
 
 \begin{figure}[htbp!]
 	\centering
@@ -78,10 +67,10 @@ six_ff_keff = 1.24872 +/- 0.00020
 	\label{fig:compact}
 \end{figure}
 
-oecd-exI-2a: Figure \ref{fig:assembly}.
-same material composition as OECD MHTGR 350 - Phase III
-six_ff_keff = 1.07006 +/- 0.00011
-1.29 h MPI = 8, OMP = 16
+\section{OECD Exercise II}
+
+oecd-exI-2a: 
+Figure \ref{fig:assembly}.
 
 \begin{figure}[htbp!]
 	\centering
@@ -93,9 +82,6 @@ six_ff_keff = 1.07006 +/- 0.00011
 \section{OECD Standard-column}
 
 Figure \ref{fig:stcol}.
-same material composition as OECD MHTGR 350 - Phase III
-six_ff_keff = 1.07201 +/- 0.00007
-4.24 h MPI = 8, OMP = 16
 
 \begin{figure}[htbp!]
 	\centering
@@ -107,9 +93,6 @@ six_ff_keff = 1.07201 +/- 0.00007
 \section{OECD Fullcore}
 
 Figure \ref{fig:fullcore}.
-same material composition as OECD MHTGR 350 - Phase III
-six_ff_keff = 1.06284 +/- 0.00006
-10.6 h MPI = 8, OMP = 16
 
 \begin{figure}[htbp!]
 	\centering
