--- a/oecd/bibliography.bib
+++ b/oecd/bibliography.bib
@@ -1,19 +1,18 @@
 
-@article{bostelmann_criticality_2016,
-	title = {Criticality calculations of the {Very} {High} {Temperature} {Reactor} {Critical} {Assembly} benchmark with {Serpent} and {SCALE}/{KENO}-{VI}},
-	volume = {90},
-	issn = {03064549},
-	url = {https://linkinghub.elsevier.com/retrieve/pii/S0306454915300177},
-	doi = {10.1016/j.anucene.2015.12.008},
-	abstract = {Within the framework of the IAEA Coordinated Research Project on HTGR Uncertainty Analysis in Modeling, criticality calculations of the Very High Temperature Critical Assembly experiment were performed as the validation reference to the prismatic MHTGR-350 lattice calculations. Criticality measurements performed at several temperature points at this Japanese graphitemoderated facility were recently included in the International Handbook of Evaluated Reactor Physics Benchmark Experiments, and represent one of the few data sets available for the validation of HTGR lattice physics. This work compares VHTRC criticality simulations utilizing the Monte Carlo codes Serpent and SCALE/KENO-VI. Reasonable agreement was found between Serpent and KENO-VI, but only the use of the latest ENDF cross section library release, namely the ENDF/B-VII.1 library, led to an improved match with the measured data. Furthermore, the fourth beta release of SCALE 6.2/KENO-VI showed significant improvements from the current SCALE 6.1.2 version, compared to the experimental values and Serpent.},
+@article{oecd_nea_benchmark_2017,
+	title = {Benchmark of the {Modular} {High}-{Temperature} {Gas}-{Cooled} {Reactor} ({MHTGR})-350 {MW} {Core} {Design} {Volumes} {I} and {II}},
 	language = {en},
-	urldate = {2020-07-16},
-	journal = {Annals of Nuclear Energy},
-	author = {Bostelmann, Friederike and Hammer, Hans R. and Ortensi, Javier and Strydom, Gerhard and Velkov, Kiril and Zwermann, Winfried},
-	month = apr,
-	year = {2016},
-	pages = {343--352},
-	file = {Bostelmann et al. - 2016 - Criticality calculations of the Very High Temperat.pdf:/home/roberto/Zotero/storage/AVYQ7EU2/Bostelmann et al. - 2016 - Criticality calculations of the Very High Temperat.pdf:application/pdf}
+	author = {OECD NEA},
+	year = {2017},
+	pages = {110},
+	file = {2017 - Benchmark of the Modular High-Temperature Gas-Cool.pdf:/home/roberto/Zotero/storage/S8GJITSH/2017 - Benchmark of the Modular High-Temperature Gas-Cool.pdf:application/pdf}
+}
+
+@misc{gougar_prismatic_2010,
+	title = {{PRISMATIC} {COUPLED} {NEUTRONICS}/{THERMAL} {FLUIDS} {TRANSIENT} {BENCHMARK} {OF} {THE} {MHTGR}-350 {MW} {CORE} {DESIGN}},
+	author = {Gougar, Hans and Pope, Michael and Strydom, Gerhard and Baxter, Alan},
+	year = {2010},
+	file = {Gougar et al. - 2010 - PRISMATIC COUPLED NEUTRONICSTHERMAL FLUIDS TRANSI.pdf:/home/roberto/Zotero/storage/V5J54QP3/Gougar et al. - 2010 - PRISMATIC COUPLED NEUTRONICSTHERMAL FLUIDS TRANSI.pdf:application/pdf}
 }
 
 @techreport{strydom_results_2015,
@@ -21,21 +20,18 @@
 	url = {http://www.osti.gov/servlets/purl/1173079/},
 	language = {en},
 	number = {INL/EXT--14-32944, 1173079},
-	urldate = {2020-07-15},
+	urldate = {2020-08-10},
 	author = {Strydom, Gerhard and Bostelmann, Friederike and Yoon, Su Jong},
 	month = jan,
 	year = {2015},
 	doi = {10.2172/1173079},
 	pages = {INL/EXT--14--32944, 1173079},
-	file = {Strydom et al. - 2015 - Results for Phase I of the IAEA Coordinated Resear.pdf:/home/roberto/Zotero/storage/LN9NILXJ/Strydom et al. - 2015 - Results for Phase I of the IAEA Coordinated Resear.pdf:application/pdf}
+	file = {Strydom et al. - 2015 - Results for Phase I of the IAEA Coordinated Resear.pdf:/home/roberto/Zotero/storage/88NKTKE4/Strydom et al. - 2015 - Results for Phase I of the IAEA Coordinated Resear.pdf:application/pdf}
 }
 
-@article{rahnema_whitepaper_2015,
-	title = {Whitepaper {The} {Current} {Status} of the {Tools} for {Modeling} and {Simulation} of {Advanced} {High} {Temperature} {Reactor} {Neutronics} {Analysis}},
-	language = {en},
-	author = {Rahnema, Farzad and Petrovic, Bojan and Edgar, Christopher and Zhang, Dingkang and Avigni, Pietro and Huang, Michael and Terlizzi, Stefano},
-	month = dec,
-	year = {2015},
-	pages = {40},
-	file = {Rahnema et al. - Whitepaper The Current Status of the Tools for Mod.pdf:/home/roberto/Zotero/storage/YIDQDPXW/Rahnema et al. - Whitepaper The Current Status of the Tools for Mod.pdf:application/pdf}
+@misc{ortensi_oecdnea_2015,
+	title = {{OECD}/{NEA} {COUPLED} {NEUTRONIC}/{THERMAL}-{FLUIDS} {BENCHMARK} {OF} {THE} {MHTGR}-350 {MW} {CORE} {DESIGN} {VOLUME} {III}: {LATTICE} {PHYSICS} {EXERCISES}},
+	author = {Ortensi, Javier and Pope, Michael A. and Ellis, Chris and Baxter, Alan},
+	month = jan,
+	year = {2015}
 }
