--- a/oecd/model.ipynb
+++ b/oecd/model.ipynb
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {
     "scrolled": false
    },
@@ -339,7 +339,7 @@
     "    val = new_val\n",
     "    return E, val\n",
     "\n",
-    "data = st.read('oecd-fullcore_det0.m', reader='det')\n",
+    "data = st.read('oecd-fullcore2G_det0.m', reader='det')\n",
     "det = data.detectors['EnergyDetector']\n",
     "val = det.tallies\n",
     "\n",
@@ -354,7 +354,16 @@
     "plt.figure()\n",
     "plt.step(E, val)\n",
     "\n",
-    "2e1, 0.625e-6, 1e-11\n",
+    "# 26G. Upper limits [eV] from Table 30 [3]\n",
+    "E26 = [1.49E+07, 7.41E+06, 3.68E+06, 6.72E+05,\n",
+    "       1.11E+05, 1.93E+04, 3355.00, 1585.00,\n",
+    "       7.485E+02, 2.754E+02, 1.301E+02, 6.144E+01,\n",
+    "       2.900E+01, 1.370E+01, 8.320E+00, 5.040E+00,\n",
+    "       2.380E+00, 1.290E+00, 6.500E-01, 3.500E-01,\n",
+    "       2.000E-01, 1.200E-01, 8.000E-02, 5.000E-02,\n",
+    "       2.000E-02, 1.000E-02, 1e-5]\n",
+    "E26.reverse()\n",
+    "E26 = np.array(E26)/1e6  # MeV\n",
     "\n",
     "# 12 groups\n",
     "E12 = [2e7, 3.68e6, 1.11e5, 1.93e4, 7.485e2, 2.754e2, 1.301e2,\n",
@@ -386,6 +395,30 @@
     "plt.ylabel('Normalized flux')\n",
     "plt.grid(True)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.000e-11, 1.000e-08, 2.000e-08, 5.000e-08, 8.000e-08, 1.200e-07,\n",
+       "       2.000e-07, 3.500e-07, 6.500e-07, 1.290e-06, 2.380e-06, 5.040e-06,\n",
+       "       8.320e-06, 1.370e-05, 2.900e-05, 6.144e-05, 1.301e-04, 2.754e-04,\n",
+       "       7.485e-04, 1.585e-03, 3.355e-03, 1.930e-02, 1.110e-01, 6.720e-01,\n",
+       "       3.680e+00, 7.410e+00, 1.490e+01])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "E26"
    ]
   },
   {
