--- a/oecd/model.ipynb
+++ b/oecd/model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -528,6 +528,68 @@
     "* [3]: Gougar et al. PRISMATIC COUPLED NEUTRONICS/THERMAL FLUIDS TRANSIENT BENCHMARK OF THE MHTGR-350 MW CORE DESIGN BENCHMARK DEFINITION. 2010.\n",
     "* [4]: Han. SENSITIVITY STUDY ON THE ENERGY GROUP STRUCTURE FOR HIGH TEMPERATURE REACTOR ANALYSIS. 2008."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Homogeneous vs Heterogeneous materials"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.176042413113923\n"
+     ]
+    }
+   ],
+   "source": [
+    "r_uco = 0.02125  # [cm]\n",
+    "r_buf = 0.03125  # [cm]\n",
+    "r_ipyc = 0.03475  # [cm]\n",
+    "r_sic = 0.03825  # [cm]\n",
+    "r_opyc = 0.04225  # [cm]\n",
+    "\n",
+    "V_total = np.pi * 0.6225**2 * 4.928\n",
+    "V_triso = V_total * 0.35\n",
+    "V_mat = V_total - V_triso\n",
+    "\n",
+    "V_uco = V_triso * (r_uco/r_opyc)**3\n",
+    "V_buf = V_triso * ((r_buf/r_opyc)**3 - (r_uco/r_opyc)**3)\n",
+    "V_ipyc = V_triso * ((r_ipyc/r_opyc)**3 - (r_buf/r_opyc)**3)\n",
+    "V_sic = V_triso * ((r_sic/r_opyc)**3 - (r_ipyc/r_opyc)**3)\n",
+    "V_opyc = V_triso * (1 - (r_sic/r_opyc)**3)\n",
+    "\n",
+    "rho_uco = 10.5  # [g/cm3]\n",
+    "rho_buf = 1.0  # [g/cm3]\n",
+    "rho_ipyc = 1.9  # [g/cm3]\n",
+    "rho_sic = 3.2  # [g/cm3]\n",
+    "rho_opyc = 1.9  # [g/cm3]\n",
+    "rho_mat = 1.74  # [g/cm3]\n",
+    "\n",
+    "M_uco = rho_uco * V_uco\n",
+    "M_buf = rho_buf * V_buf\n",
+    "M_ipyc = rho_ipyc * V_ipyc\n",
+    "M_sic = rho_sic * V_sic\n",
+    "M_opyc = rho_opyc * V_opyc\n",
+    "M_mat = rho_mat * V_mat\n",
+    "M_tot = M_uco + M_buwf + M_ipyc + M_sic + M_opyc + M_mat\n",
+    "\n",
+    "print(M_tot/V_total)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
