--- a/moltres/thermal-fluids/verification/notes.ipynb
+++ b/moltres/thermal-fluids/verification/notes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,33 +19,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.795\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "1.3491200836100543"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Geometry\n",
+    "# calculate geometry\n",
     "rf = 1.27/2 - 0.0125 # cm\n",
     "rg = 1.27/2  # cm\n",
     "rc = 1.59/2  # cm\n",
-    "print(rc)\n",
     "rm = 1.885 - rc  # cm\n",
     "rg2 = rm - 0.01;\n",
     "rc2 = np.sqrt(rc**2 + rm**2)\n",
@@ -54,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -62,17 +54,12 @@
      "output_type": "stream",
      "text": [
       "v:  1794.3269863206274 cm/s\n",
-      "Re:  40233.287886822734\n",
-      "Pr:  0.6057854666666667\n",
-      "Nu:  90.84976240779365\n",
-      "h:  1714.1464605244084\n",
-      "kgc:  0.0017220579431317952\n"
+      "kgc:  0.001722 W/cm/C\n"
      ]
     }
    ],
    "source": [
     "# coolant flow and film thermal conductivity\n",
-    "\n",
     "rho = 4.94e-6  # kg/cm3\n",
     "cp = 5.188e3  # J/kg/K\n",
     "mlc = 0.0176  # kg/s\n",
@@ -84,53 +71,60 @@
     "v /= 100  # m/s\n",
     "D = 2 * rc / 100  # m\n",
     "Re = rho * v * D / mu\n",
-    "print('Re: ', Re)\n",
+    "# print('Re: ', Re)\n",
     "\n",
     "kc = 0.3  # W/m/K\n",
     "Pr = mu * cp/kc\n",
-    "print('Pr: ', Pr)\n",
+    "# print('Pr: ', Pr)\n",
     "\n",
     "Nu = 0.023*(Re**0.8)*(Pr**0.4)\n",
-    "print('Nu: ', Nu)\n",
+    "# print('Nu: ', Nu)\n",
     "h = Nu/D * kc  # W/m^2/K\n",
-    "print('h: ', h)\n",
+    "# print('h: ', h)\n",
     "\n",
     "h /= 1e4  # W/cm^2/K\n",
     "kgc = h * rm * np.log(rm/rg2)\n",
-    "print('kgc: ', kgc)  # W/cm/C"
+    "print('kgc: ', np.round(kgc, 6), 'W/cm/C')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "54.97787143782138\n",
-      "33788.570307049704\n"
+      "peak power density:  54.97787143782138\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "770.0466281149521"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "# heat generated: q * L = q0 * 2/pi * L\n",
     "q = 35  # W/cm3\n",
     "q0 = q * np.pi/2\n",
-    "print(q0)\n",
-    "\n",
-    "# Coolant analytical value:\n",
+    "print('peak power density: ', q0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "770.0466281149521"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# coolant outlet analytical temperature:\n",
     "rho = 4.94e-6  # kg/cm3\n",
     "cp = 5.188e3  # J/kg/K\n",
     "mlc = 0.0176  # kg/s\n",
@@ -142,7 +136,6 @@
     "rf = 1.27/2 - 0.0125  # cm\n",
     "\n",
     "qf = q0 * 2/np.pi * np.pi * rf**2 * L\n",
-    "print(qf)\n",
     "To = Ti + 1/rho/cp/v * qf /np.pi/rc**2\n",
     "To"
    ]
