--- a/moltres-thermal-fluids/validation-unitcell/notes.ipynb
+++ b/moltres-thermal-fluids/validation-unitcell/notes.ipynb
@@ -77,6 +77,7 @@
     }
    ],
    "source": [
+    "# Calculates film thermal conductivity\n",
     "# Material properties: values from tak et al 2008\n",
     "\n",
     "# Fuel\n",
@@ -146,6 +147,7 @@
     }
    ],
    "source": [
+    "# Makes material properties plot\n",
     "T = np.linspace(400, 1600, 13)\n",
     "\n",
     "Tf = np.array([400, 1600])\n",
@@ -175,13 +177,6 @@
     "plt.xlabel('Temperature [$^{\\circ}$C]', fontsize=14)\n",
     "plt.savefig(\"val-unit-matprop\", dpi=300, bbox_inches=\"tight\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
